use remote mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.thymeleaf.cach=false
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ingoportal
-spring.datasource.username=root
-spring.datasource.password=jbpeng
+spring.datasource.url=jdbc:mysql://codecrazy.cn:3306/ingoportal
+spring.datasource.username=ingo
+spring.datasource.password=Ingo#Portal!888
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
